; ModuleID = '/home/carl/AnghaBench/TDengine/src/modules/http/src/extr_httpJson.c_httpInitJsonBuf.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/modules/http/src/extr_httpJson.c_httpInitJsonBuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.HttpContext*, i32, i32, i64, i32 }
%struct.HttpContext = type { i64, i32, i32 }

@JSON_BUFFER_SIZE = common dso_local global i32 0, align 4
@HTTP_COMPRESS_GZIP = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [50 x i8] c"context:%p, fd:%d, ip:%s, json buffer initialized\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @httpInitJsonBuf(%struct.TYPE_3__* %0, %struct.HttpContext* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca %struct.HttpContext*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store %struct.HttpContext* %1, %struct.HttpContext** %4, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 4
  %7 = load i32, i32* %6, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 3
  store i64 0, i64* %11, align 8
  %12 = load i32, i32* @JSON_BUFFER_SIZE, align 4
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 2
  store i32 %12, i32* %14, align 4
  %15 = load %struct.HttpContext*, %struct.HttpContext** %4, align 8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  store %struct.HttpContext* %15, %struct.HttpContext** %17, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  %21 = load i32, i32* @JSON_BUFFER_SIZE, align 4
  %22 = call i32 @memset(i32 %20, i32 0, i32 %21)
  %23 = load %struct.HttpContext*, %struct.HttpContext** %4, align 8
  %24 = getelementptr inbounds %struct.HttpContext, %struct.HttpContext* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* @HTTP_COMPRESS_GZIP, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %28, label %33

28:                                               ; preds = %2
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load %struct.HttpContext*, %struct.HttpContext** %30, align 8
  %32 = call i32 @httpGzipCompressInit(%struct.HttpContext* %31)
  br label %33

33:                                               ; preds = %28, %2
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 0
  %36 = load %struct.HttpContext*, %struct.HttpContext** %35, align 8
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 0
  %39 = load %struct.HttpContext*, %struct.HttpContext** %38, align 8
  %40 = getelementptr inbounds %struct.HttpContext, %struct.HttpContext* %39, i32 0, i32 2
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 0
  %44 = load %struct.HttpContext*, %struct.HttpContext** %43, align 8
  %45 = getelementptr inbounds %struct.HttpContext, %struct.HttpContext* %44, i32 0, i32 1
  %46 = load i32, i32* %45, align 8
  %47 = call i32 @httpTrace(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0), %struct.HttpContext* %36, i32 %41, i32 %46)
  ret void
}

declare dso_local i32 @memset(i32, i32, i32) #1

declare dso_local i32 @httpGzipCompressInit(%struct.HttpContext*) #1

declare dso_local i32 @httpTrace(i8*, %struct.HttpContext*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
